[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "pyserve"
version = "1.0.2"
description = "One-command local file sharing server with QR code"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
qr = ["qrcode[pil]"]

[project.scripts]
pyserve = "pyserve:main"

[tool.setuptools]
py-modules = ["pyserve"]
